--- a/main.yaml
+++ b/main.yaml
@@ -4,6 +4,7 @@
   become: true
   vars_files:
     - apache.vars
+    - mysql.vars
   tasks:
 
 
@@ -54,3 +55,49 @@
         state: restarted
         enabled: true
 
+
+    - name: "Mariadb-Server - Package Installation"
+      yum:
+        name:
+          - mariadb-server
+          - MySQL-python
+        state: present
+
+    - name: "Mariadb-Server - Restarting/Enabling Service"
+      service:
+        name: mariadb
+        state: restarted
+        enabled: true
+
+    - name: "Mariadb-Server - Setting Root Passsword"
+      ignore_errors: true
+      mysql_user:
+        login_user: "root"
+        login_password: ""
+        name: "root"
+        password: "{{ mysql_root_password }}"
+        host_all: true
+
+    - name: "Mariadb-Server - Removing Anonymous Users"
+      mysql_user:
+        login_user: "root"
+        login_password: "{{ mysql_root_password }}"
+        name: ""
+        state: absent
+        host_all: true
+
+    - name: "Mariadb-Server - Creating Database {{ mysql_extra_database }}"
+      mysql_db:
+        login_user: "root"
+        login_password: "{{ mysql_root_password }}"
+        name: "{{ mysql_extra_database }}"
+        state: present
+
+    - name: "mariadb-Server - Creating User {{ mysql_extra_user }}"
+      mysql_user:
+        login_user: "root"
+        login_password: "{{ mysql_root_password }}"
+        name: "{{ mysql_extra_user }}"
+        host: "%"
+        password: "{{ mysql_extra_password }}"
+        priv: "{{ mysql_extra_database }}.*:ALL"
