--- a/main.yaml
+++ b/main.yaml
@@ -101,3 +101,38 @@
         host: "%"
         password: "{{ mysql_extra_password }}"
         priv: "{{ mysql_extra_database }}.*:ALL"
+
+    - name: "Wordpress - Downloading Archive File {{ wp_url }}"
+      get_url:
+        url: "{{ wp_url }}"
+        dest: /tmp/wordpress.tar.gz
+
+    - name: "Wordpress - Extracting /tmp/wordpress.tar.gz"
+      unarchive:
+        src: /tmp/wordpress.tar.gz
+        dest: /tmp/
+        remote_src: true
+
+    - name: "Wordpress - Copying Contents from /tmp/wordpress/ to /var/www/html/{{ domain_name }}"
+      copy:
+        src: /tmp/wordpress/
+        dest: "/var/www/html/{{ domain_name }}"
+        remote_src: true
+        owner: "{{ httpd_user }}"
+        group: "{{ httpd_group }}"
+
+    - name: "Wordpress - Creating wp-config.php from template"
+      template:
+        src: wp-config.php.tmpl
+        dest: "/var/www/html/{{ domain_name }}/wp-config.php"
+        owner: "{{ httpd_user }}"
+        group: "{{ httpd_group }}"
+
+    - name: "Post-Installation CleanUp"
+      file:
+        path: "{{ item }}"
+        state: absent
+      with_items:
+        - /tmp/wordpres.tar.gz
+        - /tmp/wordpress
+
